<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C918A"
    tools:context=".Activities.RegistroActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="159dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/logoxl" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="104dp"
        android:onClick="VolverAEmpecemos"
        android:text="@string/textRegistro"
        android:textColor="#fff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:onClick="VolverAEmpecemos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="355dp"
        android:layout_height="531dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/redoneadas"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textNombre"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textApellido"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNombre" />

        <EditText
            android:id="@+id/editCelular"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textCelular"
            android:inputType="number"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editApellido" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textEmail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCelular" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textPass"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <EditText
            android:id="@+id/editPass2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/textPass2"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bottonr"
            android:fontFamily="@font/pmedium"
            android:onClick="Registro"
            android:paddingBottom="10dp"
            android:text="@string/textbtnRegistro"
            android:textColor="#ffff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPass2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>